feat: docs auth
