# backend/docs/swagger.json
@@ -9,6 +9,43 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Authenticate using username and password to get a token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authentication"
+                ],
+                "summary": "Authenticate a user and obtain a token",
+                "parameters": [
+                    {
+                        "description": "Credentials for login",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully authenticated, token returned",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "post": {
                 "description": "Create a new user with the input payload",
@@ -29,7 +66,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.UserEntity"
+                            "$ref": "#/definitions/entity.UserInput"
                         }
                     }
                 ],
@@ -45,17 +82,22 @@
         }
     },
     "definitions": {
-        "entity.UserEntity": {
+        "entity.Login": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "password": {
                     "type": "string"
                 },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.UserInput": {
+            "type": "object",
+            "properties": {
                 "email": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "password": {
                     "type": "string"
