# backend/internal/entity/authentication.go
@@ -1,0 +1,6 @@
+package entity
+
+type Login struct {
+		Username string `json:"username"`
+		Password string `json:"password"`
+}
